--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,17 @@
 --- #YAML:1.0
-name:               Cisco-Management
-version:            0.03
-abstract:           Interface for Cisco Management
-author:
+name:                Cisco-Management
+version:             0.03
+abstract:            Interface for Cisco Management
+license:             ~
+author:              
     - Michael Vincent <vin at vinsworld dot com>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
-build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    IO::Socket:     ~
-    Net::SNMP:      ~
-    Sys::Hostname:  ~
-    Test::Simple:   ~
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
+    IO::Socket:                    
+    Net::SNMP:                     
+    Sys::Hostname:                 
+    Test::Simple:                  
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
