--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: Interface for Cisco Management
+abstract: 'Interface for Cisco Management'
 author:
   - 'Michael Vincent <vin at vinsworld dot com>'
 build_requires:
@@ -7,8 +7,8 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
-license: unknown
+generated_by: 'ExtUtils::MakeMaker version 6.72, CPAN::Meta::Converter version 2.132140'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -23,4 +23,4 @@ requires:
   Socket: 0
   Sys::Hostname: 0
   Test::Simple: 0
-version: 0.06
+version: 0.07
